# data_analytics_agent_finance

./: .gitignore  ADVANCED_ENGINEERING_ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  INSTALL_GUIDE.md  LICENSE  README.md  UV_SETUP.md  backtest_tools.py  data_analytics_agent.py  data_analytics_agent_new.py  factor_analysis_tools.py  gpt_researcher_tool_selector.py  pyproject.toml  requirements.txt  setup.sh  test_gpt_researcher_tool_selector.py  tools_clean.py  tools_registry.py  usage_example.py  validator.py  visualize1.py
.agent_data_x/runs/1af118c8-5194-4825-9ac2-2de320a5d7cc/reflection_3/: result.json
.agent_data_y/runs/a313b0ae-cced-4b6a-ac0a-973fdcb3e31f/: graph_state.json
.agent_data_y/runs/a313b0ae-cced-4b6a-ac0a-973fdcb3e31f/reflection_0/: monthly_weights.parquet  rolling_betas.parquet
.agent_data_y/runs/a313b0ae-cced-4b6a-ac0a-973fdcb3e31f/reflection_1/: monthly_returns.parquet  result.json  strategy_performance.parquet
.agent_data_y/runs/a7429a78-dfcb-43d4-bbcd-d202cb9758e6/: graph_state.json
.agent_data_y/runs/a7429a78-dfcb-43d4-bbcd-d202cb9758e6/reflection_0/: betas.parquet  bootstrap_sharpes.parquet  equity_curve.html  metrics_summary.csv  monthly_returns.html  monthly_returns.parquet  positions.parquet  result.json  rolling_betas.html  strategy_monthly_returns.parquet
.agent_data_y/runs/a7429a78-dfcb-43d4-bbcd-d202cb9758e6/reflection_1/: aligned_monthly_cpi.parquet
.agent_data_y/runs/a7429a78-dfcb-43d4-bbcd-d202cb9758e6/reflection_2/: aligned_monthly_prices.parquet  backtest_metrics_grid.csv  backtest_metrics_summary.json  backtest_monthly_pnl.csv  beta_stat_tests.csv  beta_stat_tests_window_36.csv  bootstrap_beta_cis.json  patch_backtest_resample_fix.diff  permutation_test_results.json  requirements.txt  result.json  rolling_betas_base.parquet
.agent_data_z/runs/456485c2-bdcc-41f3-9bf1-0a4957f70e6f/: graph_state.json
.agent_data_z/runs/456485c2-bdcc-41f3-9bf1-0a4957f70e6f/reflection_0/: backtest_timeseries.csv  beta_ranks.csv  cpi_levels_last4y.csv  cpi_monthly_change_last4y.csv  executed_weights_lagged.csv  intended_weights.csv  prices_monthly_last4y.csv  result.json  returns_monthly_last4y.csv  rolling_betas_24m.csv
.agent_data_z/runs/6addf21b-f3f3-43bf-9c8a-d7b0e11a2974/: graph_state.json
.agent_data_z/runs/6addf21b-f3f3-43bf-9c8a-d7b0e11a2974/reflection_0/: insider_net_90d_rank_20250926.csv  result.json
.agent_data_z/runs/99bb1a24-dde9-47f6-9341-543bfe6cf37b/reflection_1/: filtered_open_market_insider_trades.csv  insider_factor_index_drawdown.html  result.json  top_symbols_by_insider_signal.html
.agent_data_z/runs/99bb1a24-dde9-47f6-9341-543bfe6cf37b/reflection_2/: insider_factor_index_drawdown.html  insider_signal_panel.parquet  insider_signal_panel_enhanced.parquet  latest_insider_signal_ranking.csv  result.json  top_symbols_by_insider_signal.html
.agent_data_z/runs/b36d0936-05a8-4a7f-a249-9aa5d24e7f75/: graph_state.json
.agent_data_z/runs/b36d0936-05a8-4a7f-a249-9aa5d24e7f75/reflection_0/: insider_signal_snapshots.csv  (+6 more)
.agent_data_z/runs/ee465949-f9d5-4025-8dfd-2efac84d180a/: graph_state.json
core/: async_tools.py  caching.py  manifest_utils.py  manifests.py  prompting_blocks.py  utils.py
few_shots/: factor_generation.py  signal_generation.py  simple_data_processing.py  simple_visuals.py  statistical_analysis.py
(+21 files in other folders)
