[project]
name = "data-analytics-agent"
version = "2.0.0"
description = "Advanced data analytics agent with LLM orchestration, research capabilities, and unused tools integration"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Aaryan Goyal", email = "aaryan@example.com" }
]
keywords = ["ai", "agent", "data-analytics", "llm", "langgraph", "financial-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LLM & AI Orchestration (Critical)
    "openai>=1.12.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "pydantic>=2.11.0",
    "pydantic-ai>=0.0.12",

    # Research & Embeddings
    "tavily-python>=0.3.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    # "gpt-researcher>=0.7.0",  # Temporarily disabled due to build issues

    # Data Processing & Analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",

    # Financial Data APIs
    "polygon-api-client>=1.15.0",
    "fredapi>=0.5.2",
    "certifi>=2024.12.0",

    # Visualization & Reporting
    "plotly>=5.22.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "pyarrow>=16.0.0",

    # Async & Performance
    "aiolimiter>=1.1.0",
    "tenacity>=8.2.0",
    "filelock>=3.13.0",

    # Utilities & Environment
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.12.0",
    "graphviz>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.82.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
data-analytics-agent = "data_analytics_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.82.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | few_shots
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B026",  # Star-arg unpacking after a keyword argument is strongly discouraged
]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true